fix align icon with username on review, fix align save review button

--- a/front-web/src/pages/Catalog/components/MovieDetails/styles.scss
+++ b/front-web/src/pages/Catalog/components/MovieDetails/styles.scss
@@ -61,6 +61,8 @@
 
 .movie-post-review {
     padding: 20px 20px 15px 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .review-input {
@@ -74,6 +76,9 @@
     border-radius: 10px;
     width: 330px;
     height: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .btn-submit-text {
