--- a/front-web/src/pages/Catalog/components/MovieReview/styles.scss
+++ b/front-web/src/pages/Catalog/components/MovieReview/styles.scss
@@ -6,15 +6,20 @@
 
 .user-review-info {
     display: flex;
+    flex-direction: row;
+    vertical-align: middle;
+    justify-content: left;
+    align-items: center;
+    margin-bottom: 5px;
 }
 
 .review-content {
-    // height: 150px;
     min-height: 50px;
     max-height: 175px;
     padding: 14px 17px;
     border: 1px solid #e1e1e1;
     border-radius: 20px;
+    text-align: left;
 }
 
 .review-text {
@@ -23,4 +28,13 @@
 
 .movie-review-container {
     margin-bottom: 15px !important;
+}
+
+.user-name {
+    margin: 0 0 0 15px;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 22px;
+    letter-spacing: -0.015em;
+    color: #ffffff;
 }
